[package]
name        = "basemyai-rest"
description = "Local HTTP/JSON sidecar for the BaseMyAI memory engine (for non-Rust languages)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "basemyai_rest"
path = "src/lib.rs"

[[bin]]
name = "basemyai-rest"
path = "src/main.rs"

# Not distributed via `cargo-dist` (see root `dist-workspace.toml`): the REST
# sidecar ships as a Docker image (`Dockerfile` in this crate), not a
# standalone precompiled binary. Only `basemyai-cli` opts into `dist`.
[package.metadata.dist]
dist = false

[features]
default = ["embed"]
embed   = ["basemyai/embed"]
# `test-util` : InMemoryProvider + embedder déterministe (ni CMake ni Candle).
test-util = ["basemyai/test-util"]

[dependencies]
basemyai      = { path = "../basemyai" }
basemyai-core = { version = "0.2.0", path = "../basemyai-core" }

axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
futures-util = { workspace = true }

serde.workspace      = true
serde_json.workspace = true
# `signal` : arrêt gracieux (`server::shutdown`, Ctrl+C/SIGTERM) — pas dans le
# jeu de features `[workspace.dependencies]` (partagé par des crates qui n'en
# ont pas besoin), ajouté seulement ici.
tokio = { workspace = true, features = ["signal"] }
tracing.workspace    = true
# Même version que basemyai-cli/basemyai-mcp (pas encore promue au niveau
# workspace) — sans elle, tous les tracing::info!/error! du crate sont des
# no-op silencieux : aucun subscriber n'était jamais installé avant ce refactor.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait.workspace = true
thiserror.workspace  = true

subtle = "2"
uuid   = { version = "1", features = ["v4"] }
dirs.workspace = true
toml   = "1.1"

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"

[lints]
workspace = true
