[package]
name = "basemyai"
description = "Local memory engine for AI agents: 4 memory layers, temporal RAG, per-agent isolation, mandatory encryption. Built on basemyai-core."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/basemyai"
keywords = ["memory", "agent", "ai", "rag", "vector-search"]
categories = ["database-implementations", "algorithms"]

[features]
# `embed` : active l'inférence Candle (lourd, exige les fichiers modèle).
# Le moteur natif (ADR-024/025/030) est l'**unique** backend depuis ADR-032
# (libSQL retiré du workspace) — plus un choix de feature, un dépendance
# directe.
default = []
embed = ["basemyai-core/embed"]
# `test-util` : expose `HashEmbedder` + `Memory::open_in_memory` — embedder
# déterministe sans modèle pour tests/spikes des bindings (ni Candle ni CMake).
# `tempfile` sert `NativeMemoryStore::open_ephemeral` (l'équivalent natif
# d'`open_in_memory` — le moteur LSM n'a pas de mode in-memory).
# Jamais en production.
test-util = ["dep:tempfile", "basemyai-engine/test-util"]

[dependencies]
basemyai-core = { version = "0.1.0", path = "../basemyai-core" }
# Backend natif (ADR-024/ADR-027/ADR-032) — dépendance directe, non optionnelle
# depuis la suppression de libSQL. Interne, non publié.
basemyai-engine = { path = "../basemyai-engine" }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }
# Détection matérielle (toujours compilé : le module `setup` n'est pas optionnel).
sysinfo = { workspace = true }
# Résolution du dossier cache des modèles.
dirs = { workspace = true }
# Parsing de la sortie d'extraction (consolidation) — JSON.
serde_json = { workspace = true }
# Client HTTP async — détection des serveurs LLM locaux (Ollama, llama.cpp).
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# Accès direct aux types du core dans les tests d'intégration (fakes pour la DI).
basemyai-core = { path = "../basemyai-core" }
# `test-util` toujours actif en dev-dependency : les tests unitaires internes
# (`#[cfg(test)] mod tests`) appellent `NativeMemoryStore::open`/`open_ephemeral`
# (gardés `cfg(any(test, feature = "test-util"))`) quelles que soient les
# `--features` passées à `cargo test -p basemyai` (ex. job CI `embed`, qui ne
# passe pas `test-util`) — sans ceci, `Engine::open` (basemyai-engine) reste
# invisible puisque ce crate n'est ni en `cfg(test)` ni construit avec sa
# propre feature `test-util`.
basemyai-engine = { path = "../basemyai-engine", features = ["test-util"] }
tempfile.workspace = true

[lints]
workspace = true
