[package]
name = "basemyai-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Not part of the workspace (see the root Cargo.toml member list) and not
# built by `cargo xtask check`/`test`/`ci` — this crate requires a nightly
# toolchain plus the `cargo-fuzz` subcommand (libFuzzer), neither of which the
# default CI matrix provides. See fuzz/README.md for how to run it.

[package.metadata]
cargo-fuzz = true

# Deliberately isolated from the root workspace (see
# `docs/adr/ADR-025-native-engine-storage-foundation.md` / TODO-NATIVE-ENGINE
# N2): this crate needs nightly + libFuzzer and must never be pulled into
# `cargo build`/`test`/`xtask ci`. An empty `[workspace]` table here is the
# standard cargo-fuzz way to keep a nested crate out of the parent workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.basemyai-engine]
path = ".."

[[bin]]
name = "key_roundtrip"
path = "fuzz_targets/crypto/key_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_decode"
path = "fuzz_targets/wal/wal_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_epoch_decode"
path = "fuzz_targets/wal/wal_epoch_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_node_decode"
path = "fuzz_targets/vector/vector_node_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_meta_decode"
path = "fuzz_targets/vector/vector_meta_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_node_decode_structured"
path = "fuzz_targets/vector/vector_node_decode_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graph_entity_decode"
path = "fuzz_targets/graph/graph_entity_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graph_edge_decode"
path = "fuzz_targets/graph/graph_edge_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_header_decode"
path = "fuzz_targets/sst/sst_header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_data_block_decode"
path = "fuzz_targets/sst/sst_data_block_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_data_block_decode_structured"
path = "fuzz_targets/sst/sst_data_block_decode_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_block_index_decode"
path = "fuzz_targets/sst/sst_block_index_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_block_index_decode_structured"
path = "fuzz_targets/sst/sst_block_index_decode_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_bloom_filter_decode"
path = "fuzz_targets/sst/sst_bloom_filter_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_footer_decode"
path = "fuzz_targets/sst/sst_footer_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "store_meta_decode"
path = "fuzz_targets/sst/store_meta_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sst_manifest_decode"
path = "fuzz_targets/sst/sst_manifest_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generation_meta_decode"
path = "fuzz_targets/sst/generation_meta_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto_meta_decode"
path = "fuzz_targets/crypto/crypto_meta_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto_meta_decode_structured"
path = "fuzz_targets/crypto/crypto_meta_decode_structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_envelope_decode"
path = "fuzz_targets/crypto/wal_envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encrypted_sst_block_decode"
path = "fuzz_targets/crypto/encrypted_sst_block_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fts_docterms_decode"
path = "fuzz_targets/fts/fts_docterms_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fts_postings_decode"
path = "fuzz_targets/fts/fts_postings_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fts_stats_decode"
path = "fuzz_targets/fts/fts_stats_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_index_meta_decode"
path = "fuzz_targets/memory/memory_index_meta_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_record_decode"
path = "fuzz_targets/memory/memory_record_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "memory_vecmap_decode"
path = "fuzz_targets/memory/memory_vecmap_decode.rs"
test = false
doc = false
bench = false
